# rust_practice

./: README.md
axum_sandbox/: Cargo.toml
axum_sandbox/src/: handlers.rs  main.rs  repositories.rs
axum_sandbox/tests/: quick_dev.rs
basic/: Cargo.toml  README.md
basic/src/: lib.rs  main.rs  sample.json  sample1.txt  sample2.txt
crates_and_modules/: Cargo.toml  README.md
crates_and_modules/src/: main.rs
crates_and_modules/src/test_module/: mod.rs  sub1.rs  sub2.rs
deck/src/: main.rs
fizzbuzz/: README.md
fizzbuzz/src/: main.rs
kakeibo-app/: README.md
kakeibo-app/src/: main.rs
kakeibo-app/src/models/: mod.rs
kakeibo-app/src/services/: mod.rs
kakeibo-app/src/services/io/: mod.rs
kakeibo-app/src/services/register/: mod.rs
kakeibo-app/src/services/summarize/: mod.rs
leptos-tutorial/: Cargo.toml  README.md  index.html
leptos-tutorial/src/: main.rs  pages.rs
leptos-tutorial/src/pages/: About.rs  Contact.rs  Home.rs
sandbox/: Cargo.toml
sandbox/src/: main.rs
sandbox/src/component/: component1.rs  component2.rs  mod.rs
sandbox/src/controllers/: todo_controller.rs
sandbox/tests/: cli.rs
syntax-review/: Cargo.toml
syntax-review/src/: main.rs  vars.rs
syntax-review/src/test_module/: sub_module1.rs  sub_module2.rs
syntax-review/src/vars/: sub_a.rs  sub_b.rs
todo-app/backend/: Cargo.toml
todo-app/backend/src/: main.rs
yew-tutorial/: Cargo.toml  README.md
yew-tutorial/src/: main.rs
