[package]
name = "axum_sandbox"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1.0"
tower = { version = "0.4", features = ["util", "timeout"] }
tower-http = { version = "0.5", features = ["add-extension", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
anyhow = "1"
thiserror = "1"
uuid = { version = "1.0", features = ["serde", "v4"] }
dotenvy = "0.15.7"
